--- a/ui/poetry/src/app/poetry/poetry.component.html
+++ b/ui/poetry/src/app/poetry/poetry.component.html
@@ -1,3 +1,14 @@
 <div class="poetry">
-  Poetry works
+  <div class="search-panel">
+    <app-search></app-search>
+  </div>
+  <div class="container">
+    <div class="filter-panel">
+      <app-author-filter></app-author-filter>
+      <app-title-filter></app-title-filter>
+    </div>
+    <div class="results-panel">
+      <app-results></app-results>
+    </div>
+  </div>
 </div>
