--- a/ui/poetry/src/app/results/results.component.html
+++ b/ui/poetry/src/app/results/results.component.html
@@ -1,27 +1,24 @@
 <div class="container">
-  <div *ngIf="!poems.length">
-    No results found.
-  </div>
-  <div class="poem-result" *ngFor="let poem of poems;">
-    <mat-card appearance="outlined">
-      <mat-card-header>
+  <mat-spinner *ngIf="searchInProgress" [diameter]="50" color="accent" strokeWidth="2" mode="indeterminate"></mat-spinner>
+  <ng-container *ngIf="!searchInProgress">
+    <div *ngIf="!poems.length">
+      No results found.
+    </div>
+    <div class="poem-result" *ngFor="let poem of poems;">
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title>{{poem.title?.length? "\"" + poem.title + "\"" : "(Unknown title)"}}</mat-card-title>
+          <mat-card-subtitle>by <span>{{poem['author'] ?? "(Unknown Author)"}}</span></mat-card-subtitle>
+        </mat-card-header>
 
-        <mat-card-subtitle>
-
-        </mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-header>
-        <mat-card-title>{{poem.title?.length? "\"" + poem.title + "\"" : "(Unknown title)"}}</mat-card-title>
-        <mat-card-subtitle>by <span>{{poem['author'] ?? "(Unknown Author)"}}</span></mat-card-subtitle>
-      </mat-card-header>
-
-      <mat-card-content>
-        <div class="lines">
-          <div *ngFor="let line of poem.lines ?? []" class="line">
-            {{line}}
+        <mat-card-content>
+          <div class="lines">
+            <div *ngFor="let line of poem.lines ?? []" class="line">
+              {{line}}
+            </div>
           </div>
-        </div>
-      </mat-card-content>
-    </mat-card>
-  </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </ng-container>
 </div>
