--- a/ui/poetry/src/app/results/results.component.scss
+++ b/ui/poetry/src/app/results/results.component.scss
@@ -1,6 +1,13 @@
 .container {
   overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  mat-spinner {
+    margin-top: 40px;
+  }
 }
+
 .title {
   font-size: 20px;
 }
@@ -19,4 +26,5 @@
 
 .poem-result {
   margin: 10px 0px;
+  width: 100%;
 }
